fix text overflow issue on Results component

--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -6,6 +6,8 @@
 .results__data {
   padding-bottom: 80px;
 
+  word-break: break-all;
+
   font-size: 1.3rem;
 }
 
